[add] runpod capabilities

--- a/.env.json
+++ b/.env.json
@@ -1,5 +1,5 @@
 { 
-  "ACCESS_KEY_ID":"AKIAXDRE6TENLTPAOJEZ",
-  "ACCESS_SECRET_KEY":"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",
+  "ACCESS_KEY_ID":"NAOSDNASDKLADKALDNASLKDANSDUMMY",
+  "ACCESS_SECRET_KEY":"AODNAOIDNAOIDNASOIDNAOSIDNASDUMMY",
   "BUCKET_NAME":"gemma-middle-storage"
 }
