--- a/exec.env
+++ b/exec.env
@@ -1,3 +1,3 @@
-export ACCESS_KEY_ID='AKIAXDRE6TENLTPAOJEZ'
-export ACCESS_SECRET_KEY='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'
+export ACCESS_KEY_ID='LNLDAKSNDLKSANDKLSANDKASDDUMMY'
+export ACCESS_SECRET_KEY='mASDLKANDAKLSDNSDASDLASDUMMY'
 export BUCKET_NAME='gemma-middle-storage'
